--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "react-multi-switch-toggle": "^1.0.12",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
