--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
